--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,8 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   sliver_fill_remaining_box_adapter: ^1.0.0
+  shared_preferences: ^2.0.17
+  flutter_secure_storage: ^8.0.0
    
 # flutter_native_splash:
 #   color: "#42a5f5"
